--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
+    "@types/cookie-parser": "^1.4.9",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.1",
@@ -29,6 +31,8 @@
   },
   "dependencies": {
     "@prisma/client": "^6.16.0",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "jsonwebtoken": "^9.0.2",
     "zod": "^4.1.7"
