--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.3.1",
     "bcrypt": "^6.0.0",
     "express": "^5.1.0",
@@ -35,6 +36,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "zod": "^4.1.7"
   }
 }
